--- a/portfólio.html
+++ b/portfólio.html
@@ -326,37 +326,37 @@
                   <p class="project-title">Site para Barbearia</p>
                 </div>
                 <div class="project-container">
-                  <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display=''">
+                  <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="images/img/blog.png" alt="project image">
                   </div>
                   <p class="project-title">Blog</p>
                 </div>
                 <div class="project-container">
-                  <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display=''">
+                  <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="images/img/PL.png" alt="project image">
                   </div>
                   <p class="project-title">Página de Login</p>
                 </div>
                 <div class="project-container">
-                  <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display=''">
+                  <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
                   <p class="project-title">Em desenvolvimento</p>
                 </div>
                 <div class="project-container">
-                  <div class="project-img-container"onclick="document.getElementById('modal-wrapper').style.display=''">
+                  <div class="project-img-container"onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
                   <p class="project-title">Em desenvolvimento</p>
                 </div>
                 <div class="project-container">
-                  <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display=''">
+                  <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
                   <p class="project-title">Em desenvolvimento</p>
                 </div>
                 <div class="project-container">
-                  <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display=''">
+                  <div class="project-img-container" onclick="document.getElementById('modal-wrapper').style.display='block'">
                     <img src="./images/floor.jpg" alt="project image">
                   </div>
                   <p class="project-title">Em desenvolvimento</p>
